# bzip2-rust

./: .gitignore  Cargo.toml  POSSIBLE function delarations  README.md  rust-toolchain  test.data
lib/: bitwriter.rs  compress.rs  decompress.rs  huffman.rs  mod.rs  mtf.rs  report.rs
src/: POSSIBLE function delarations  Peter copy.bz2  Peter_Piper.txt  Peter_Piper2.txt  Peter_Piper2.txt.bz2  Untitled.txt  growing_test.tst  lib.rs  main.rs  peter_test.tst  she_sells.me.bz2  she_sells.new.bz2  she_sells.txt  she_sells.txt.bz2  she_sells1.bz2  she_sells1.txt  she_sells_real.txt.bz2
src/bitstream/: bitpacker.rs  bitreader.rs  bitwriter.rs  mod.rs
src/bwt_algorithms/: bwt_sort.rs  mod.rs  sais_fallback.rs
src/bwt_ribzip/: bwt_internal.rs  bwt_inverse.rs  duval.rs  mod.rs  sais.rs
src/compression/: compress.rs  compress_block.rs  decompress.rs  mod.rs
src/huffman_coding/: huffman.rs  huffman_code_from_weights.rs  mod.rs
src/julian/: block_sort.rs  mod.rs
src/julian/fallback/: fallback_q_sort3.rs  mod.rs  (+3 more)
src/lib/: bitreader.rs  bitty.rs  bitwriter.rs  bwt.rs  bwt_decode_2x1.rs  bwt_ds.rs  bwt_ds_2.rs  cli.rs  compress.rs  compress_block.rs  crc.rs  data_in.rs  decompress.backup.7_7_2022  decompress.rs  decompress.rs.bak  huffman.rs  huffman_code_from_len.rs  huffman_code_from_weights.rs  linked_lists.rs  mod.rs  mtf.rs  options.rs  randomizing_table.rs  rle1.rs  rle2.rs  rle2_mtf_decode.rs  symbol_map.rs
src/snyder/: bwt_ds.rs  bwt_ds_big.rs  bwt_ds_par.rs  mod.rs  native.rs  simple.rs  ss3.rs
src/tools/: cli.rs  crc.rs  data_in.rs  freq_count.rs  mod.rs  mtf.rs  rle1.rs  rle2.rs  rle2_mtf.rs  rle2_mtf_decode.rs  symbol_map.rs
src/unused/: huffman_code_from_len.rs
(+24 files in other folders)
