[package]
name = "bzip2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cbindgen = "0.20.0"
clap = { version = "3", features = ["derive"] }
log = {version = "0.4.14", features = ["release_max_level_warn"]}
simplelog = { version = "0.12.0", features = ["paris"] }
cargo-instruments = "0.4.5"
#rdxsort = "0.3.0"

[profile.release]
debug = true