[package]
name = "bzip2"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "0.4.17", features = ["release_max_level_trace"]}
simplelog = { version = "0.12.0", features = ["paris"] }
rayon = "1.6.0"

[profile.release]
debug = 1
lto = true
codegen-units = 1

